force-app/main/default/objects/Hospital__c/fields/Helicopter_Access__c.field-meta.xml
<CustomField>
    <fullName>Helicopter_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Helicopter Access</label>
    <type>Checkbox</type>
</CustomField>