force-app/main/default/objects/Hospital__c/fields/No_Ambulances__c.field-meta.xml
<CustomField>
    <fullName>No_Ambulances__c</fullName>
    <label>No. Ambulances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>