force-app/main/default/objects/Hospital__c/validationRules/Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT REGEX( Postal_Code__c, &quot;^$|[0-9]{2}-[0-9]{3}&quot;)</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>Postal code is invalid!</errorMessage>
</ValidationRule>